--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,17 @@
 
 :root {
   --clr-white: #ffffff;
+  --clr-smoke-white: #ffffff;
   --clr-black: #000000;
-  --clr-grey: #2b2727;
-  --clr-grey-2: #2b2727;
+  --clr-grey: #acccff;
+  --clr-grey-2: #b4b3b3;
 
   --clr-dark-blue: #0237ab;
   --clr-light-blue: #125ac6;
 }
 
 body {
+  background-color: var(--clr-white);
   margin: 0;
   font-family: "Open Sans";
   -webkit-font-smoothing: antialiased;
@@ -44,7 +46,7 @@ nav {
 }
 
 .nav__brand h1 {
-  color: var(--clr-white);
+  color: var(--clr-black);
 
   font-family: "Poiret One";
   font-size: 1.5em;
@@ -57,7 +59,7 @@ nav {
   background-image: url("./assets/magnifying-glass.svg");
   background-repeat: no-repeat;
   background-position-y: center;
-  color: var(--clr-white);
+  color: var(--clr-smoke-white);
 
   width: 250px;
   height: 35px;
@@ -69,7 +71,7 @@ nav {
 }
 
 .nav__search::placeholder {
-  color: var(--clr-white);
+  color: var(--clr-smoke-white);
   font-family: "Open Sans";
 }
 
@@ -97,25 +99,17 @@ nav {
   height: 100%;
   padding: 0 10px;
 
-  color: var(--clr-white);
+  color: var(--clr-smoke-white);
 
   font-weight: 600;
   text-decoration: none;
 }
 
-.nav__links li a:hover {
-  background-color: rgba(34, 64, 109, 0.3);
-}
-
 .nav__connect {
   width: 175px;
   height: 50px;
-  margin: 0 75px 0 auto;
+  margin-top: 20px;
 
-  background: rgba(255, 255, 255, 0.2);
-  color: var(--clr-white);
-
-  border: none;
   border-radius: 4px;
 
   font-family: "Open Sans";
@@ -127,18 +121,30 @@ nav {
 }
 
 .nav__connect:hover {
-  background-color: var(--clr-dark-blue);
+  background-color: var(--clr-grey-2);
+}
+
+.button {
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--clr-grey-2);
 }
 
 /* ------------------------------------------------------ */
 /* -- HEADER -- */
 
 header {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     45deg,
     rgb(239, 138, 98) 0 50%,
     rgb(46, 122, 197) 50% 100%
-  );
+  ); */
   background-size: contain;
   background-position: right;
   background-repeat: no-repeat;
@@ -153,7 +159,7 @@ header {
 
   position: absolute;
   bottom: 25px;
-  left: 10%;
+  left: 30%;
   max-width: 450px;
 
   font-family: "Open Sans";
@@ -300,11 +306,11 @@ header {
   width: 125px;
   height: 40px;
 
-  background-color: var(--clr-light-blue);
-  color: var(--clr-white);
+  background-color: var(--clr-white);
+  color: var(--clr-black);
 
   margin-left: auto;
-  border: none;
+
   border-radius: 4px;
 
   font-family: "Open Sans";
@@ -316,7 +322,7 @@ header {
 }
 
 .card__button:hover {
-  background-color: var(--clr-dark-blue);
+  background-color: var(--clr-grey-2);
 }
 
 .card__button:hover .card__button {
@@ -324,11 +330,178 @@ header {
 }
 
 .card__button--out {
-  background-color: #ba1840;
+  background-color: var(--clr-white);
 }
 
 .card hr {
   margin-top: 15px;
+}
+
+/* ------------------------------------------------------*/
+/* -- FORM -- */
+/* Style the form container */
+.form-container {
+  max-width: 600px;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  background-color: var(--clr-white);
+}
+
+/* Style form elements */
+.form-container label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.form-container input[type="text"],
+.form-container input[type="number"],
+.form-container input[type="date"],
+.form-container input[type="time"],
+.form-container button {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.form-container button {
+  width: 100%;
+  height: 30px;
+  margin-top: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.form-container button:hover {
+  background-color: #959595;
+}
+
+/* Style error messages */
+.error-message {
+  color: red;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+
+/* card */
+
+.flip-card__inner {
+  width: 300px;
+  height: 350px;
+  position: relative;
+  background-color: transparent;
+  perspective: 1000px;
+  /* width: 100%;
+    height: 100%; */
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.toggle:checked ~ .flip-card__inner {
+  transform: rotateY(180deg);
+}
+
+.toggle:checked ~ .flip-card__front {
+  box-shadow: none;
+}
+
+.flip-card__front,
+.flip-card__back {
+  padding: 20px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  background: lightgrey;
+  gap: 20px;
+  border-radius: 5px;
+  border: 2px solid var(--main-color);
+  box-shadow: 4px 4px var(--main-color);
+}
+
+.flip-card__back {
+  width: 100%;
+  transform: rotateY(180deg);
+}
+
+.flip-card__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.title {
+  margin: 20px 0 20px 0;
+  font-size: 25px;
+  font-weight: 900;
+  text-align: center;
+  color: var(--main-color);
+}
+
+.flip-card__input {
+  width: 250px;
+  height: 40px;
+  border-radius: 5px;
+  border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
+  box-shadow: 4px 4px var(--main-color);
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--font-color);
+  padding: 5px 10px;
+  outline: none;
+}
+
+.flip-card__input::placeholder {
+  color: var(--font-color-sub);
+  opacity: 0.8;
+}
+
+.flip-card__input:focus {
+  border: 2px solid var(--input-focus);
+}
+
+.flip-card__btn:active,
+.button-confirm:active {
+  box-shadow: 0px 0px var(--main-color);
+  transform: translate(3px, 3px);
+}
+
+.flip-card__btn {
+  margin: 20px 0 20px 0;
+  width: 120px;
+  height: 40px;
+  border-radius: 5px;
+  border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
+  box-shadow: 4px 4px var(--main-color);
+  font-size: 17px;
+  font-weight: 600;
+  color: var(--font-color);
+  cursor: pointer;
+}
+
+/* Footer Style */
+.footer_style {
+  height: 50px;
+  width: 100%;
+  background-color: var(--clr-grey);
+  color: var(--clr-white);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px 10px 10px 10px;
 }
 
 /* ------------------------------------------------------ */
